--- a/public/index.html
+++ b/public/index.html
@@ -7,18 +7,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
+
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  
   <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
   <script src="https://kit.fontawesome.com/61e46721ec.js" crossorigin="anonymous"></script>
 
   <link rel="stylesheet" href="./assets/css/style.css" />
+
+  <!-- Snipcart -->
+  <link rel="stylesheet" href="https://cdn.snipcart.com/themes/v3.0.12/default/snipcart.css" />
+
   <title>React App</title>
 </head>
 
 <body>
 
   <div id="root"></div>
+
+  <div hidden id="snipcart" data-api-key="ZTJkY2JkN2MtNDBiYi00MjdhLTk0MzQtMmUwODI3ZWRhZTdmNjM3MjQwMDUwNjA4OTExOTE1" data-currency="mxn"></div>
+
 
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
@@ -29,6 +38,10 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
     crossorigin="anonymous"></script>
+
+  <!-- Snipcart -->
+  <script src="https://cdn.snipcart.com/themes/v3.0.12/default/snipcart.js"></script>
+
 </body>
 
 </html>
