--- a/public/index.html
+++ b/public/index.html
@@ -17,10 +17,12 @@
   <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
   <script src="https://kit.fontawesome.com/61e46721ec.js" crossorigin="anonymous"></script>
 
-  <link rel="stylesheet" href="./assets/css/style.css" />
-
+  <link rel="stylesheet" href="./assets/css/style.css"/>
+  
+  <link rel="preconnect" href="https://app.snipcart.com">
+  <link rel="preconnect" href="https://cdn.snipcart.com">
   <!-- Snipcart -->
-  <!-- <link rel="stylesheet" href="https://cdn.snipcart.com/themes/v3.0.12/default/snipcart.css" /> -->
+  <link rel="stylesheet" href="https://cdn.snipcart.com/themes/v3.0.15/default/snipcart.css" />
 
   <title>JERS - Marca de Ropa Mexicana</title>
 </head>
@@ -43,7 +45,7 @@
     crossorigin="anonymous"></script> -->
 
   <!-- Snipcart -->
-  <!-- <script src="https://cdn.snipcart.com/themes/v3.0.12/default/snipcart.js"></script> -->
+  <script src="https://cdn.snipcart.com/themes/v3.0.15/default/snipcart.js"></script>
 
 </body>
 
